ADD optim region aggregation + embedd simplify binaries

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,6 +48,12 @@ where = src
 exclude =
     tests
 
+[options.package_data]
+* =
+    simplify/bin.Linux/simplify
+    simplify/bin.Windows/simplify.exe
+    simplify/bin.OSX/simplify
+
 [options.extras_require]
 # Add here additional requirements for extra features, to install with:
 # `pip install blue_brain_atlas_web_exporter[PDF]` like:
