ADD region summary exporter

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,7 @@ testing =
 console_scripts =
     cellexport = blue_brain_atlas_web_exporter.cellexport:main
     parcellationexport = blue_brain_atlas_web_exporter.parcellationexport:main
+    regionsummaryexport = blue_brain_atlas_web_exporter.regionsummaryexport:main
 
 # For example:
 # console_scripts =
