Added hierarchy json to jsonld conversion

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ scipy
 pynrrd
 scikit-image
 randomaccessbuffer @ git+https://bbpgitlab.epfl.ch/dke/randomaccessbufferpy.git@v0.1.7
+rdflib
+pyLD
+jsonpath_ng
