--- a/setup.cfg
+++ b/setup.cfg
@@ -37,6 +37,9 @@ install_requires =
     pynrrd
     scikit-image
     randomaccessbuffer @ git+https://bbpgitlab.epfl.ch/dke/randomaccessbufferpy.git@v0.1.7
+    rdflib
+    pyLD
+    jsonpath_ng
 
 # The usage of test_requires is discouraged, see `Dependency Management` docs
 # tests_require = pytest; pytest-cov
