--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ numpy
 scipy
 pynrrd
 scikit-image
-randomaccessbuffer @ git+https://bbpgitlab.epfl.ch/dke/randomaccessbufferpy.git@v0.1.7
+randomaccessbuffer @ git+https://gitlab-ci-token:${CI_JOB_TOKEN}@bbpgitlab.epfl.ch/dke/randomaccessbufferpy.git@v0.1.7
 rdflib
 pyLD
 jsonpath_ng
+pytest
+pytest-cov
