--- a/setup.cfg
+++ b/setup.cfg
@@ -36,7 +36,7 @@ install_requires =
     scipy
     pynrrd
     scikit-image
-    randomaccessbuffer @ git+https://bbpgitlab.epfl.ch/dke/randomaccessbufferpy.git@v0.1.7
+    #randomaccessbuffer @ git+https://gitlab-ci-token:${CI_JOB_TOKEN}@bbpgitlab.epfl.ch/dke/randomaccessbufferpy.git@v0.1.7
     rdflib
     pyLD
     jsonpath_ng
