Open-source additions

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,10 +5,9 @@
 [metadata]
 name = blue_brain_atlas_web_exporter
 description = Add a short description here!
-author = BlueBrainProject - EPFL
-author-email = bbp-ou-dke@epfl.ch
-license = mit
-long-description = file: readme.md
+author = Blue Brain Project, EPFL
+license = Apache-2
+long-description = file: README.md
 long-description-content-type = text/x-rst; charset=UTF-8
 url = https://bbpgitlab.epfl.ch/dke/apps/blue_brain_atlas_web_exporter
 project-urls =
