--- a/.github/workflows/on_pull_request.yml
+++ b/.github/workflows/on_pull_request.yml
@@ -20,7 +20,7 @@ jobs:
           python-version: '3.7'
 
       - name: Install Python dependencies
-        run: pip install .[dev]
+        run: pip install .[testing]
 
       - name: Run unit tests
         env:
